--- a/client/src/components/User/RightSection/Fullmarket/Market/ScoreCard/Soccer/SoccerScoreCard.module.css
+++ b/client/src/components/User/RightSection/Fullmarket/Market/ScoreCard/Soccer/SoccerScoreCard.module.css
@@ -8,9 +8,9 @@
   color: white;
   font-weight: 700;
   padding: 0 10px;
-  background: #303030;
-  font-size: 14px;
+  font-size: 12px;
   align-items: center;
+  background: linear-gradient(180deg, #2a3a43 27%, #1c282d 83%);
 }
 
 .board {
