--- a/client/src/components/User/RightSection/ChangePassword/ChangePassword.module.css
+++ b/client/src/components/User/RightSection/ChangePassword/ChangePassword.module.css
@@ -1,40 +1,47 @@
-.changepass {
-  padding-top: 80px;
-  background-color: white;
-  height: 350px;
+.paper {
+  width: 100%;
+  border: 1px solid #c8ced3;
+  padding: 20px;
+  box-shadow: none;
+  border-radius: 4px;
+  margin-bottom: 16px;
+  background-color: #fff;
 }
+
 .helper {
   color: #ffffff;
   border: 0;
+  margin: -21px -21px 20px -21px;
   padding: 10px;
-  background: #4a4a4a;
+  background: linear-gradient(180deg, #2a3a43 27%, #1c282d 83%);
   min-height: 1px;
   font-weight: 700;
   justify-content: space-between;
-  text-transform: uppercase;
+  font-size: 15px;
+  font-weight: 700;
 }
+
+.label {
+  font-weight: 700;
+  margin-bottom: 5px;
+}
+
 .table {
   width: 100%;
-  display: flex;
-  justify-content: center;
-  margin: 0 auto 15px;
-  max-width: 900px;
+  margin: 0 0 15px;
+  max-width: 500px;
 }
-.label {
-  display: inline-block;
-  width: 300px;
-  font-weight: bold;
-  text-align: right;
-  padding-right: 30px;
-}
+
 .field {
   width: 100%;
 }
+
 .p {
   color: red;
   text-align: left;
   margin: 5px 0 0 0;
 }
+
 .p::before {
   display: inline;
 }
