--- a/client/src/components/User/RightSection/UserList/Actions/ChangePassword/ChangePassword.module.css
+++ b/client/src/components/User/RightSection/UserList/Actions/ChangePassword/ChangePassword.module.css
@@ -1,19 +1,37 @@
-.table {
+.paper {
   width: 100%;
-  display: flex;
-  justify-content: center;
-  margin: 15px auto;
-  max-width: 900px;
-  padding-right: 50px;
+  border: 1px solid #c8ced3;
+  padding: 20px;
+  box-shadow: none;
+  border-radius: 4px;
+  margin-bottom: 16px;
+  background-color: #fff;
+}
+
+.helper {
+  color: #ffffff;
+  border: 0;
+  margin: 0;
+  padding: 10px;
+  background: linear-gradient(180deg, #2a3a43 27%, #1c282d 83%);
+  min-height: 1px;
+  font-weight: 700;
+  justify-content: space-between;
+  font-size: 15px;
+  font-weight: 700;
 }
 
 .label {
-  display: inline-block;
-  width: 300px;
-  font-weight: bold;
-  text-align: right;
-  padding-right: 30px;
+  font-weight: 700;
+  margin-bottom: 5px;
 }
+
+.table {
+  width: 100%;
+  margin: 0 0 15px;
+  max-width: 500px;
+}
+
 .field {
   width: 100%;
 }
@@ -44,9 +62,6 @@
 }
 
 @media screen and (max-width: 767px) {
-  .changepass {
-    padding-top: 20px;
-  }
   .table {
     display: block;
     padding: 0 10px;
