--- a/client/src/components/Login/login.module.css
+++ b/client/src/components/Login/login.module.css
@@ -3,15 +3,35 @@
   margin: 0 auto;
   border-radius: 15px;
   position: absolute;
-  width: 90%;
-  max-width: 750px;
-  top: 50%;
+  width: 100%;
+  max-width: 540px;
+  height: 410px;
+  top: 35%;
   transform: translateY(-50%);
   left: 0;
   right: 0;
-  background-color: rgba(38, 74, 93, 0.75);
+  /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#e43124+0,771d18+100 */
+  background: #e43124; /* Old browsers */
+  background: -moz-linear-gradient(
+    top,
+    #e43124 0%,
+    #771d18 100%
+  ); /* FF3.6-15 */
+  background: -webkit-linear-gradient(
+    top,
+    #e43124 0%,
+    #771d18 100%
+  ); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(
+    to bottom,
+    #e43124 0%,
+    #771d18 100%
+  ); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e43124', endColorstr='#771d18',GradientType=0 ); /* IE6-9 */
+  border-radius: 8px;
   display: flex;
   flex-wrap: wrap;
+  box-shadow: 0 5px 20px rgb(0 0 0 / 50%);
 }
 
 .loginContainerMini {
@@ -37,7 +57,7 @@
 }
 
 .logo {
-  margin: 10px auto 40px;
+  margin: 0 auto 40px;
 }
 
 .logo img {
@@ -94,6 +114,10 @@
   padding: 20px;
   border-top: 0;
   color: #666;
+  order: 2;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .formcontentFull {
@@ -101,10 +125,11 @@
 }
 
 .loginImage {
-  background-image: url("../../assets/images/banner3.jpg");
+  background-image: url("../../assets/images/banner3.jpeg");
   width: 50%;
   background-size: cover;
   background-repeat: no-repeat;
+  order: 1;
 }
 
 .root {
@@ -117,29 +142,26 @@
 }
 
 .slidingBackground {
-  background: url("../../assets/images/banner2.jpg");
+  background: url("../../assets/images/banner2.jpg") no-repeat center 4px
+    #14213d;
   height: 100%;
   width: 100%;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: left top;
 }
 
 .inputField {
-  display: block;
   width: 100%;
-  height: 45px;
-  padding: 6px 12px 6px 35px;
-  border-radius: 25px;
+  height: 35px;
   font-size: 14px;
-  line-height: 1.42857143;
-  color: #555;
-  background-color: #fff;
-  background-image: none;
-  border: 1px solid #d2d6de;
-  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  border: 1px solid #aaa;
+  box-shadow: inset 0 2px 0 0 rgba(0, 0, 0, 0.1);
+  margin: 0;
+  font-family: Tahoma, Helvetica, sans-serif;
+  color: #1e1e1e;
+  background: #fff;
+  border-radius: 4px;
+  padding: 5px;
+  box-sizing: border-box;
   outline: none;
-  font-family: "Roboto Condensed", sans-serif;
 }
 
 .inputField:focus {
@@ -151,74 +173,71 @@
   margin-bottom: 15px;
 }
 
-.formgroup svg {
-  position: absolute;
-  top: 12px;
-  left: 12px;
-  font-size: 16px;
-  color: #000;
+.button {
+  background: linear-gradient(-180deg, #315195 0%, #14213d 100%);
+  font-size: 15px;
+  font-weight: 700;
+  width: 100%;
+  border: 0;
+  outline: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  color: #fff;
+  border-radius: 4px;
+  padding: 8px;
+  cursor: pointer;
 }
 
-.button {
-  background-color: #fff;
-  border-color: #fff;
-  font-size: 14px;
-  font-weight: 700;
-  padding: 10px 20px;
-  text-transform: uppercase;
-  margin-top: 10px;
-  border-radius: 25px;
-  line-height: 1.42857143;
-  text-align: center;
-  white-space: nowrap;
-  vertical-align: middle;
-  touch-action: manipulation;
-  cursor: pointer;
-  border: 0;
-  width: 100%;
-  color: #4a4a4a;
-}
-
-/**
-**/
-.button {
-  background-color: #fff;
-  border-color: #fff;
-  font-size: 14px;
-  font-weight: 700;
-  padding: 10px 20px;
-  text-transform: uppercase;
-  margin-top: 10px;
-  border-radius: 25px;
-  line-height: 1.42857143;
-  text-align: center;
-  white-space: nowrap;
-  vertical-align: middle;
-  touch-action: manipulation;
-  cursor: pointer;
-  border: 0;
-  width: 100%;
-  color: #4a4a4a;
+.button span {
+  margin-right: 8px;
 }
 
 @media screen and (max-width: 767px) {
+  .loginContainer {
+    top: 0;
+    bottom: 0;
+    border-radius: 0;
+    transform: none;
+    height: 100%;
+  }
+
   .formcontent {
     width: 100%;
+    height: 40%;
+    justify-content: start;
+  }
+
+  .wrapper {
+    position: relative;
+  }
+
+  .logo {
+    margin: 0;
+    position: absolute;
+    top: 35%;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
   }
 
   .loginImage {
-    display: none;
+    background: url("../../assets//images/login-curve-bg.png") no-repeat center
+      center;
+    width: 100%;
+    height: 60%;
+    background-size: 100%;
+    margin-top: -10%;
   }
 
-  .slidingBackground {
-    background: url("../../assets/images/banner2.jpg") repeat-x;
-    height: 150%;
-    width: 200%;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
-    top: -50%;
-    position: absolute;
-    left: -70%;
+  .inputField {
+    font-size: 18px;
+    height: 45px;
+  }
+
+  .button {
+    font-size: 18px;
+    padding: 12px;
   }
 }
