--- a/client/src/components/User/RightSection/UserList/Actions/ViewInfo/ViewInfoDetail/ViewInfoDetail.module.css
+++ b/client/src/components/User/RightSection/UserList/Actions/ViewInfo/ViewInfoDetail/ViewInfoDetail.module.css
@@ -1,38 +1,70 @@
 .input {
   width: 100%;
-  height: 30px;
+  outline: 0;
+  background-color: #fff;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  padding: 8px;
+  border: none;
+  color: #555;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  font-size: 14px;
+  height: auto;
+  box-sizing: border-box;
+  letter-spacing: 0;
+  margin-bottom: 15px;
 }
+
+.input:disabled {
+  background: #eee;
+}
+
 .label {
-  margin-top: 20px;
-  font-weight: 600;
+  margin: 0 0 5px 0;
+  font-weight: 700;
 }
+
 .personinfo {
-  margin-right: 50px;
-  width: 20%;
+  margin-right: 30px;
+  width: 25%;
   margin-top: 10px;
   display: flex;
   flex-direction: column;
 }
+
 .infohead {
-  width: 98%;
-  background-color: #e0f1f1;
+  width: 100%;
+  background: linear-gradient(180deg, #2a3a43 27%, #1c282d 83%);
   padding: 8px;
   font-weight: bold;
+  color: #fff;
 }
+
 .flexinfo {
   display: flex;
   flex-wrap: wrap;
-  max-width: 98%;
+  max-width: 100%;
 }
 
 .container {
-  padding: 20px;
+  margin-bottom: 20px;
 }
+
 .button {
   margin: 5px;
 }
+
 .p {
   color: red;
   text-align: right;
   font-size: 12px;
+}
+
+@media screen and (max-width: 767px) {
+  .personinfo {
+    margin-right: 0;
+    width: 100%;
+  }
 }
